fix: alignment and links

--- a/dev-portfolio/assets/css/style.css
+++ b/dev-portfolio/assets/css/style.css
@@ -34,6 +34,7 @@ body {
 }
 
 /* *** ANIMATIONS  ****/
+
 .fade-in {
   -webkit-animation: fade-in 5s both;
 }
@@ -72,10 +73,68 @@ body {
     webkit-transform: translateX(0);
   }
 }
-.fade-in-top {
+.fade-in-top{
   -webkit-animation: fade-in-top 2s both;
+ 
 }
 @-webkit-keyframes fade-in-top {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-50px);
+  }
+}
+/*
+.fade-in-top-2{
+   -webkit-animation: fade-in-top-2 800ms both;
+   -webkit-animation-delay: 200ms;
+}
+.fade-in-top-3{
+  -webkit-animation: fade-in-top-3 800ms both;
+  -webkit-animation-delay: 400ms;
+}
+.fade-in-top-4{
+  -webkit-animation: fade-in-top-4 800ms both;
+  -webkit-animation-delay: 600ms;
+}
+.fade-in-top-5{
+  -webkit-animation: fade-in-top-5 800ms both;
+  -webkit-animation-delay: 800ms;
+}
+.fade-in-top-6{
+  -webkit-animation: fade-in-top-6 800ms both;
+  -webkit-animation-delay: 1000ms;
+}
+.fade-in-top-7{
+  -webkit-animation: fade-in-top-7 800ms both;
+  -webkit-animation-delay: 1200ms;
+}
+.fade-in-top-8{
+  -webkit-animation: fade-in-top-8 800ms both;
+  -webkit-animation-delay: 1400ms;
+}
+.fade-in-top-9{
+  -webkit-animation: fade-in-top-9 800ms both;
+  -webkit-animation-delay: 1600ms;
+}
+.fade-in-top-10{
+  -webkit-animation: fade-in-top-10 800ms both;
+  -webkit-animation-delay: 1800ms;
+}
+.fade-in-top-11{
+  -webkit-animation: fade-in-top-7 800ms both;
+  -webkit-animation-delay: 2000ms;
+}
+.fade-in-top-12{
+  -webkit-animation: fade-in-top-12 800ms both;
+  -webkit-animation-delay: 2200ms;
+} */
+/* 
+  100% {
+    opacity: 1;
+    webkit-transform: translateY(0);
+  }
+}
+@-webkit-keyframes fade-in-top-2 {
   0% {
     opacity: 0;
     -webkit-transform: translateY(-50px);
@@ -85,6 +144,107 @@ body {
     webkit-transform: translateY(0);
   }
 }
+@-webkit-keyframes fade-in-top-3 {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    webkit-transform: translateY(0);
+  }
+}
+@-webkit-keyframes fade-in-top-4{
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    webkit-transform: translateY(0);
+  }
+}
+@-webkit-keyframes fade-in-top-5{
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    webkit-transform: translateY(0);
+  }
+}
+@-webkit-keyframes fade-in-top-6{
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    webkit-transform: translateY(0);
+  }
+}
+@-webkit-keyframes fade-in-top-7{
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    webkit-transform: translateY(0);
+  }
+}
+@-webkit-keyframes fade-in-top-8{
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    webkit-transform: translateY(0);
+  }
+}
+@-webkit-keyframes fade-in-top-9{
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    webkit-transform: translateY(0);
+  }
+}
+@-webkit-keyframes fade-in-top-10{
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    webkit-transform: translateY(0);
+  }
+}
+@-webkit-keyframes fade-in-top-11{
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    webkit-transform: translateY(0);
+  }
+}
+@-webkit-keyframes fade-in-top-12{
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    webkit-transform: translateY(0);
+  }
+} */
+
 
 .fade-in-bottom {
   -webkit-animation: fade-in-bottom 2s both;
@@ -466,7 +626,7 @@ EXPERIENCE SECTION
   flex-direction: column;
   align-items: center;
 }
-.exp-third > * {
+.exp-third :first-child {
   margin: 0.8em;
 }
 .circle-group-1 {
@@ -1159,7 +1319,7 @@ MEDIA QUERY - LAPTOP SIZE
     color: var(--white-gray);
     justify-self: center;
     padding: 0.4em 1.2em;
-    margin-right: 0.3em;
+    margin-right: 1.3em;
     transition: all 300ms ease-in-out;
   }
   .header h3 {
